# LunaX

./: .gitignore  LICENSE  README.md  jpg_to_txt.py  main.py  map_to_test.ipynb  otwieranie label studio.txt  pobieranie_zdjec.ipynb  pobieranie_zdjęć_tła-updated.ipynb  pobieranie_zdjęć_tła.ipynb  pyproject.toml  test_pipeline.py
ai/: __init__.py  adapter.py
ai/Model building/: craters_data.yaml  craters_dataset_generate.py  craters_dataset_generate.py:Zone.Identifier  craters_dataset_split.py  craters_model_test.py  craters_model_train.py  craters_raw_data.csv
app/: __init__.py  analytics.py  main.py  schemas.py  storage.py
data/: detection_comments.json  detection_statuses.json  detection_tags.json  detections.parquet  downloader.py  no_detections.parquet
documents/: Analiza technologiczna.txt  Rozdzial_pracy_rozszerzony_LunaX.txt  Wizja produktu.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
tests/: conftest.py  test_analytics.py  test_api.py  test_downloader.py
