[project]
name = "lunax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"duckdb>=1.2.2",
	"fastapi>=0.116.0",
	"httpx>=0.28.1",
	"pillow>=10.4.0",
	"pyarrow>=20.0.0",
	"pytest>=8.3.5",
	"requests>=2.34.2",
	"ultralytics>=8.4.53",
	"uvicorn>=0.35.0",
]
